force-app/main/default/objects/Employee__c/Employee__c.object-meta.xml
<CustomObject>
    <label>Employee</label>
    <nameField>
        <displayFormat>EMP-{00000}</displayFormat>
        <label>Employee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>