force-app/main/default/objects/Employee__c/fields/Assigned_Region__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Region__c</fullName>
    <label>Assigned Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>