force-app/main/default/objects/Employee__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Travel Agent</fullName>
            </value>
            <value>
                <fullName>Guide</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Tour Coordinator</fullName>
            </value>
            <value>
                <fullName>Finance Executive</fullName>
            </value>
            <value>
                <fullName>Billing Analyst</fullName>
            </value>
            <value>
                <fullName>Payment Processor</fullName>
            </value>
            <value>
                <fullName>Support Staff</fullName>
            </value>
            <value>
                <fullName>Customer Service Executive</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Operations Supervisor</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Logistics Coordinator</fullName>
            </value>
            <value>
                <fullName>Accommodation Manager</fullName>
            </value>
            <value>
                <fullName>Transportation Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>