force-app/main/default/objects/Employee__c/validationRules/Email_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(Role__c, &quot;Finance Executive&quot;), ISPICKVAL(Role__c, &quot;Admin&quot;)), ISBLANK(Email__c))</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>You Must Enter the Email</errorMessage>
</ValidationRule>