force-app/main/default/objects/Employee__c/validationRules/Language_Must_be_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Language_Must_be_Selected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Role__c, &quot;Guide&quot;), ISBLANK( Languages_Spoken__c ))</errorConditionFormula>
    <errorDisplayField>Languages_Spoken__c</errorDisplayField>
    <errorMessage>You Must Select Language</errorMessage>
</ValidationRule>